# BikeParkingFinder

./: .gitignore  README.md
Clients/ClientAndroid/BikeParkingMontreal/: settings.gradle
Clients/ClientAndroid/BikeParkingMontreal/app/: build.gradle  proguard-rules.pro
Clients/ClientAndroid/BikeParkingMontreal/app/src/androidTest/java/net/apprenti_druide/bikeparkingmontreal/: ApplicationTest.java
Clients/ClientAndroid/BikeParkingMontreal/app/src/main/: AndroidManifest.xml
Clients/ClientAndroid/BikeParkingMontreal/app/src/main/java/net/apprenti_druide/bikeparkingmontreal/: AddBikeParkingFragment.java  BikeParkingLocation.java  MainActivity.java  RemoveOrConfirmParkingFragment.java  ServerRestfulCall.java
Clients/ClientAndroid/BikeParkingMontreal/app/src/main/res/layout/: activity_main.xml  fragment_add_bike_parking.xml  fragment_remove_or_confirm_parking.xml
Clients/ClientAndroid/BikeParkingMontreal/app/src/main/res/menu/: activity_main_actions.xml
Clients/ClientAndroid/BikeParkingMontreal/app/src/main/res/values/: strings.xml
Server/: BikeParkingMontrealServer.py  Cargo.toml  InitDatabase.py  ParseGettextExpression.py  gulpfile.js  package.json
Server/html/: index.html  tests.html
Server/js/: BikeParkingFinderAPI-0.1.js  TestBikeParkingFinderAPI-0.1.js  index.css  index.js  locales.js  tests.css
Server/locale/: BikeParkingMontrealServer.pot
Server/locale/fr/LC_MESSAGES/: fr.po
Server/resources/: map_icons.js  style.css
Server/src/: lib.rs  main.rs  visualCaptcha.rs
Server/templates/: index.hbs  index.html  index.html.hbs  index2.html
(+1 files in other folders)
