[package]
name="bike_parking_finder"
version="0.1.0"
authors=["juniorGreg <junior.gregoire@gmail.com>"]

[dependencies]
elastic = "*"
elastic_derive="*"
serde = "*"
serde_json = "*"
serde_derive = "*"
#mime = "*"
iron = "*"
handlebars-iron = "*"
router = "*"
#rand = "*"
staticfile = "*"
mount = "*"
time="*"
params="*"
