[package]
name="bike_parking_finder"
version="0.1.0"
authors=["juniorGreg <junior.gregoire@gmail.com>"]

[dependencies]
elastic = "*"
elastic_derive="*"
serde = "*"
serde_json = "*"
serde_derive = "*"
#mime = "*"
rocket = "0.3.6"
rocket_codegen = "0.3.6"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["handlebars_templates"]
